Bones in transformed armatures (rotation and scale) don't scale properly to cursor #92515
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#92515
Loading…
Reference in New Issue
No description provided.
Delete Branch "%!s(<nil>)"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.71
Blender Version
Broken: version: 2.93.5, branch: master, commit date: 2021-10-05 12:04, hash:
a791bdabd0
Worked: Not sure, but I only started noticing this bug in 2.93.x family.
Short description of error
Scaling to cursor appears to evaluate the world space location of the cursor as if it were an untranslated pose space coordinate.
Exact steps for others to reproduce the error
Make an armature.
Scale it x3 about itself in object mode.
Enter pose mode.
Place a cursor somewhere off the origin of the bone,
set the pivot point to cursor,
scale the bone by zero. Clear scale (only) of the bone so that you can see its location.
Expected: bone's origin is located at cursor.
Actual: bone's origin is translated a third of the way to the cursor.
Reset the bone's location.
Rotate the armature 180 degrees about itself in object mode around any axis.
Again, in pose mode, scale bone to cursor by 0,
reset scale on the bone to see it.
Expected: bone's origin is at cursor.
Actual: bone's origin has traveled a third of the distance to cursor, but away from the cursor.
NOTE: that "affect only locations" doesn't affect this-- scaling to zero still moves the bone inappropriately.
Scaling bones to cursor is used most frequently to draw something like an IK target toward a particular position as marked by a mesh-- plop down a cursor projected onto the mesh, regardless of depth.
Transformed armatures are uncommon (especially rotated armatures) but scaled armatures aren't too uncommon as they're the best way to scale a model to differently scaled geometry while preserving constraint dimensions.
Rotating armatures happens when parenting armatures to other objects, which in my case is due to making interim facial armatures (for dynamic mesh deformers) that I just parent to a head bone.
Seems kinda medium priority to me.
Added subscriber: @vasiln
Changed status from 'Needs Triage' to: 'Confirmed'
This issue was referenced by
3bd6b80d65
This issue was referenced by
8dbca01531
Changed status from 'Confirmed' to: 'Resolved'