Fix T92515: Incorrect translation when scaling pose bones